# orchids-challenge

./: README.md
backend/: .env.local  hello.py  llm_service.py  pyproject.toml
backend/app/: main.py
frontend/: package-lock.json
frontend/src/app/: layout.tsx  page.tsx
